--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -13,8 +13,8 @@
         -%}
       <div>{{ copyright }}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
-      generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
-      another theme." href="https://anyoohu.github.io/">anyoohu Theme</a>.</div>
+      generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="anyoohu is
+      another theme." href="https://anyoohu.github.io/">Anyoohu</a>.</div>
       <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
     </div>
   </div>
